--- a/ScoreCard/AndroidManifest.xml
+++ b/ScoreCard/AndroidManifest.xml
@@ -21,6 +21,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.phantomrealm.scorecard.presenter.activity.PlayersActivity" />
+        <activity
+            android:name="com.phantomrealm.scorecard.presenter.activity.EditPlayerActivity" />
     </application>
 
 </manifest>
