Adding a central NewGameActivity to launch the other activities for setting up a new game.

--- a/ScoreCard/AndroidManifest.xml
+++ b/ScoreCard/AndroidManifest.xml
@@ -22,6 +22,8 @@
             </intent-filter>
         </activity>
         <activity
+            android:name="com.phantomrealm.scorecard.presenter.activity.NewGameActivity" />
+        <activity
             android:name="com.phantomrealm.scorecard.presenter.activity.PlayersActivity" />
         <activity
             android:name="com.phantomrealm.scorecard.presenter.activity.EditPlayerActivity" />
