--- a/ScoreCard/AndroidManifest.xml
+++ b/ScoreCard/AndroidManifest.xml
@@ -24,6 +24,8 @@
         <activity
             android:name="com.phantomrealm.scorecard.presenter.activity.NewGameActivity" />
         <activity
+            android:name="com.phantomrealm.scorecard.presenter.activity.ScorecardActivity" />
+        <activity
             android:name="com.phantomrealm.scorecard.presenter.activity.PlayersActivity" />
         <activity
             android:name="com.phantomrealm.scorecard.presenter.activity.EditPlayerActivity" />
