--- a/ScoreCard/AndroidManifest.xml
+++ b/ScoreCard/AndroidManifest.xml
@@ -24,7 +24,9 @@
         <activity
             android:name="com.phantomrealm.scorecard.presenter.activity.NewGameActivity" />
         <activity
-            android:name="com.phantomrealm.scorecard.presenter.activity.ScorecardActivity" />
+            android:name="com.phantomrealm.scorecard.presenter.activity.ScorecardsActivity" />
+        <activity
+            android:name="com.phantomrealm.scorecard.presenter.activity.EditScorecardActivity" />
         <activity
             android:name="com.phantomrealm.scorecard.presenter.activity.PlayersActivity" />
         <activity
